# DrakonixDashboard

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md
src/: app.rs  config.rs  main.rs  tiling.rs
src/api/: calendar.rs  mod.rs  rss.rs  weather.rs
src/ui/: mod.rs
src/ui/tabs/: calendar.rs  mod.rs  rss.rs  weather.rs
