[package]
name = "drakonix-dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "drakonix"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "2"
open = "5"
urlencoding = "2"
